# consume-kafka-avro-data

./: CMakeLists.txt
configs/: SPO_2_kafka.yaml
src/: CMakeLists.txt  Database.cpp  Database.h  KafkaConsumerCallback.cpp  KafkaConsumerCallback.h  SafeQueue.h  SchemaRegistry.cpp  SchemaRegistry.h  Version.cpp  main.cpp
src/config/: ConfigParser.cpp  ConfigParser.h
src/logging/: Logging.h
